--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
         <meta name="author" content="SCZD">
         <link rel="stylesheet" href="css/normalize.css">
         <script src="js/modernizr-custom.js"></script>
+        <script src="js/index.js"></script>
         <link rel="stylesheet" href="css/style.css">
        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-        <script type="text/javascript" src="js/particles.js"></script>
-        <script type="text/javascript" src="js/app.js"></script>
+        
     </head>
   
 
