--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             
                          <a target="_blank" href="https://sczd.github.io/infynexus/"><img id="me" src="img/42417471.jpeg" alt="i"></a>
                          <h1>SCZD</h1>
-                         <p>Student, enthusiast of science and technology, lover of music, movies, series, comics and even Japanese culture and video games.</p>
+                         <p>Student, enthusiast of science and technology, music lover, movies, series, comics and even Japanese culture and video games.</p>
             
             </div>
 
